@@ -26,6 +26,12 @@
     The authors can be reached via e-mail at crossfire-devel@real-time.com
 */
 
+/**
+ * @file
+ * This deals with monster moving, attacking, using items and such.
+ * The core function is move_monster().
+ */
+
 #include <global.h>
 #ifndef __CEXTRACT__
 #include <sproto.h>
@@ -62,14 +68,22 @@ static int talk_to_wall(object *pl, object *npc, const char *txt);
 #define MIN_MON_RADIUS 3 /* minimum monster detection radius */
 
 
-/* checks npc->enemy and returns that enemy if still valid,
+/**
+ * Checks npc->enemy and returns that enemy if still valid,
  * NULL otherwise.
- * this is map tile aware.
+ * This is map tile aware.
  * If this returns an enemy, the range vector rv should also be
  * set to sane values.
+ *
+ * @param npc
+ * monster we're considering
+ * @param[out] rv
+ * will contain vector to go to enemy if function returns not NULL.
+ * @return
+ * valid enemy for npc.
  */
 object *check_enemy(object *npc, rv_vector *rv) {
-    
+
     /* if this is pet, let him attack the same enemy as his owner
      * TODO: when there is no ower enemy, try to find a target,
      * which CAN attack the owner. */
@@ -131,7 +145,8 @@ object *check_enemy(object *npc, rv_vector *rv) {
     return can_detect_enemy(npc,npc->enemy,rv)?npc->enemy:NULL;
 }
 
-/* Returns the nearest living creature (monster or generator).
+/**
+ * Returns the nearest living creature (monster or generator).
  * Modified to deal with tiled maps properly.
  * Also fixed logic so that monsters in the lower directions were more
  * likely to be skipped - instead of just skipping the 'start' number
@@ -143,7 +158,12 @@ object *check_enemy(object *npc, rv_vector *rv) {
  * the first few directions, it could very well choose something 
  * 3 spaces away even though something directly north is closer.
  *
- * this function is map tile aware.
+ * This function is map tile aware.
+ *
+ * @param npc
+ * monster to consider
+ * @return
+ * living creature, or NULL if none found.
  */
 object *find_nearest_living_creature(object *npc) {
     int i,mflags;
@@ -184,14 +204,21 @@ object *find_nearest_living_creature(object *npc) {
 }
 
 
-/* Tries to find an enmy for npc.  We pass the range vector since
+/**
+ * Tries to find an enmy for npc.  We pass the range vector since
  * our caller will find the information useful.
  * Currently, only move_monster calls this function.
  * Fix function so that we always make calls to get_rangevector
  * if we have a valid target - function as not doing so in
  * many cases.
+ *
+ * @param npc
+ * monster we're considering.
+ * @param[out] rv
+ * vector that will contain how to reach the target. Must not be NULL.
+ * @return
+ * enemy npc wants to attack, or NULL if nont found.
  */
-
 static object *find_enemy(object *npc, rv_vector *rv)
 {
     object *attacker, *tmp=NULL;
@@ -262,12 +289,21 @@ static object *find_enemy(object *npc, rv_vector *rv)
     return tmp;
 }
 
-/* Sees if this monster should wake up.
+/**
+ * Sees if this monster should wake up.
  * Currently, this is only called from move_monster, and
  * if enemy is set, then so should be rv.
- * returns 1 if the monster should wake up, 0 otherwise.
+ * @param op
+ * monster to check.
+ * @param enemy
+ * enemy that can cause to wake up.
+ * @param[out] rv
+ * vector pointing to enemy.
+ * @return
+ * 1 if the monster should wake up, 0 otherwise.
+ * @note
+ * will return 0 if enemy is NULL.
  */
-
 static int check_wakeup(object *op, object *enemy, rv_vector *rv) {
     int radius = op->stats.Wis>MIN_MON_RADIUS?op->stats.Wis:MIN_MON_RADIUS;
 
@@ -302,6 +338,14 @@ static int check_wakeup(object *op, object *enemy, rv_vector *rv) {
     return 0;
 }
 
+/**
+ * Makes an object move in a random direction.
+ *
+ * @param op
+ * object to move.
+ * @return
+ * 1 if moved, 0 else.
+ */
 static int move_randomly(object *op) {
     int i;
 
@@ -313,10 +357,17 @@ static int move_randomly(object *op) {
     return 0;
 }
 
-/*
- * Move-monster returns 1 if the object has been freed, otherwise 0.
+/**
+ * Main monster processing routine.
+ *
+ * Will regenerate spell points, hit points.
+ * Moves the monster, handle attack, item applying, pickup, ...
+ *
+ * @param op
+ * monster to process.
+ * @return
+ * 1 if the object has been freed, otherwise 0.
  */
-
 int move_monster(object *op) {
     int dir, diff;
     object  *owner, *enemy, *part, *oph=op;
@@ -677,6 +728,20 @@ int move_monster(object *op) {
     return 0;
 }
 
+/**
+ * Checks if monster can hit in hand-to-hand combat. Multitile aware.
+ *
+ * @param ob1
+ * monster trying to hit.
+ * @param ob2
+ * target to hit.
+ * @param rv
+ * vector from ob1 to ob2.
+ * @return
+ * 1 if ob1 is adjacent to ob2, 0 else.
+ * @todo
+ * rename to something more clear (is_adjacent?).
+ */
 static int can_hit(object *ob1,object *ob2, rv_vector *rv) {
     object *more;
     rv_vector rv1;
@@ -697,13 +762,14 @@ static int can_hit(object *ob1,object *ob2, rv_vector *rv) {
 
 }
 
-/* Returns 1 is monster should cast spell sp at an enemy
- * Returns 0 if the monster should not cast this spell.
+/**
+ * Checks if a monster should cast a spell.
  *
  * Note that this function does not check to see if the monster can
  * in fact cast the spell (sp dependencies and what not.)  That is because
  * this function is also sued to see if the monster should use spell items
  * (rod/horn/wand/scroll).
+ *
  * Note that there are certainly other offensive spells that could be
  * included, but I decided to leave out the spells that may kill more
  * monsters than players (eg, disease).
@@ -711,8 +777,15 @@ static int can_hit(object *ob1,object *ob2, rv_vector *rv) {
  * This could be a lot smarter - if there are few monsters around,
  * then disease might not be as bad. Likewise, if the monster is damaged,
  * the right type of healing spell could be useful.
+ *
+ * @param monster
+ * monster trying to cast a spell.
+ * @param spell_ob
+ * spell considered.
+ * @return
+ * 1 is monster should cast spell sp, 0 else.
+ * @todo improve logic, take enemy into consideration.
  */
-
 static int monster_should_cast_spell(object *monster, object *spell_ob)
 {
     if (spell_ob->subtype == SP_BOLT || spell_ob->subtype == SP_BULLET ||
@@ -728,13 +801,23 @@ static int monster_should_cast_spell(object *monster, object *spell_ob)
     return 0;
 }
 
-
+/** Maximum number of spells to consider when choosing a spell for a monster. */
 #define MAX_KNOWN_SPELLS 20
 
-/* Returns a randomly selected spell.    This logic is still
+/**
+ * Selects a spell to cast for a monster.
+ *
+ * Returns a randomly selected spell.    This logic is still
  * less than ideal.  This code also only seems to deal with
  * wizard spells, as the check is against sp, and not grace.
- * can mosnters know cleric spells?
+ * can monsters know cleric spells?
+ *
+ * @param monster
+ * monster trying to cast a spell.
+ * @return
+ * spell to cast, NULL if none suitable found.
+ * @note
+ * Will only consider the first MAX_KNOWN_SPELLS spells found.
  */
 static object *monster_choose_random_spell(object *monster) {
     object *altern[MAX_KNOWN_SPELLS];
@@ -758,13 +841,23 @@ static object *monster_choose_random_spell(object *monster) {
     return altern[RANDOM()%i];
 }
 
-/* This checks to see if the monster should cast a spell/ability.
- * it returns true if the monster casts a spell, 0 if he doesn't.
- * head is the head of the monster.
- * part is the part of the monster we are checking against.
- * pl is the target.
- * dir is the direction to case.
- * rv is the vector which describes where the enemy is.
+/**
+ * Tries to make a (part of a) monster cast a spell.
+ *
+ * Handles sp/gr limits, and confusion.
+ *
+ * @param head
+ * head of the monster.
+ * @param part
+ * part of the monster that we use to cast.
+ * @param pl
+ * target.
+ * @param dir
+ * direction to cast.
+ * @param rv
+ * vector describing where the enemy is.
+ * @return
+ * 1 if monster casted a spell, 0 else.
  */
 
 static int monster_cast_spell(object *head, object *part,object *pl,int dir, rv_vector *rv) {
@@ -834,7 +927,22 @@ static int monster_cast_spell(object *head, object *part,object *pl,int dir, rv_
     return cast_spell(part,part,dir, spell_item, NULL);
 }
 
-
+/**
+ * Tries to make a (part of a) monster apply a spell.
+ *
+ * @param head
+ * head of the monster.
+ * @param part
+ * part of the monster that we use to cast.
+ * @param pl
+ * target.
+ * @param dir
+ * direction to cast.
+ * @param rv
+ * vector describing where the enemy is.
+ * @return
+ * 1 if monster applied a scroll, 0 else.
+ */
 static int monster_use_scroll(object *head, object *part,object *pl,int dir, rv_vector *rv) {
     object *scroll;
     object *owner;
@@ -876,7 +984,8 @@ static int monster_use_scroll(object *head, object *part,object *pl,int dir, rv_
     return 1;
 }
 
-/* monster_use_skill()-implemented 95-04-28 to allow monster skill use.
+/**
+ * monster_use_skill()-implemented 95-04-28 to allow monster skill use.
  * Note that monsters do not need the skills SK_MELEE_WEAPON and
  * SK_MISSILE_WEAPON to make those respective attacks, if we
  * required that we would drastically increase the memory
@@ -886,8 +995,22 @@ static int monster_use_scroll(object *head, object *part,object *pl,int dir, rv_
  *
  * At the moment this is only useful for throwing, perhaps for
  * stealing. TODO: This should be more integrated in the game. -MT, 25.11.01
- */  
-
+ *
+ * Will switch between at most 2 skills.
+ *
+ * @param head
+ * head of the monster.
+ * @param part
+ * part of the monster that may use a skill.
+ * @param pl
+ * target.
+ * @param dir
+ * direction to cast.
+ * @return
+ * 1 if monster used a skill, 0 else.
+ * @todo
+ * improve skill logic? Fix comments.
+ */
 static int monster_use_skill(object *head, object *part, object *pl,int dir) {
     object *skill, *owner;
 
@@ -924,8 +1047,20 @@ static int monster_use_skill(object *head, object *part, object *pl,int dir) {
     return do_skill(head, part, head->chosen_skill,dir,NULL);
 }
 
-/* Monster will use a ranged spell attack. */
-
+/**
+ * Monster will use a ranged attack (HORN, WAND, ...).
+ *
+ * @param head
+ * head of the monster.
+ * @param part
+ * part of the monster that can do a range attack.
+ * @param pl
+ * target.
+ * @param dir
+ * direction to fire.
+ * @return
+ * 1 if monster casted a spell, 0 else.
+ */
 static int monster_use_range(object *head,object *part,object *pl,int dir)
     {
     object *wand, *owner;
@@ -993,6 +1128,22 @@ static int monster_use_range(object *head,object *part,object *pl,int dir)
 	return 0;
     }
 
+/**
+ * Tries to make a (part of a) monster fire a bow.
+ *
+ * Handles sp/gr limits, and confusion.
+ *
+ * @param head
+ * head of the monster.
+ * @param part
+ * part of the monster that we use to cast.
+ * @param pl
+ * target.
+ * @param dir
+ * direction to cast.
+ * @return
+ * 1 if monster fired something, 0 else.
+ */
 static int monster_use_bow(object *head, object *part, object *pl, int dir) {
     object *owner;
 
@@ -1012,13 +1163,18 @@ static int monster_use_bow(object *head, object *part, object *pl, int dir) {
 
 }
 
-/* Checks if putting on 'item' will make 'who' do more
- * damage.  This is a very simplistic check - also checking things
+/**
+ * Checks if using weapon 'item' would be better for 'who'.
+ * This is a very simplistic check - also checking things
  * like speed and ac are also relevant.
  *
- * return true if item is a better object.
+ * @param who
+ * creature considering to apply item.
+ * @param item
+ * item to check.
+ * @return
+ * 1 if item is a better object, 0 else.
  */
-
 static int check_good_weapon(object *who, object *item) {
     object *other_weap;
     int val=0, i;
@@ -1049,6 +1205,18 @@ static int check_good_weapon(object *who, object *item) {
 
 }
 
+/**
+ * Checks if using armor 'item' would be better for 'who'.
+ * This is a very simplistic check - also checking things
+ * like speed and ac are also relevant.
+ *
+ * @param who
+ * creature considering to apply item.
+ * @param item
+ * item to check.
+ * @return
+ * 1 if item is a better object, 0 else.
+ */
 static int check_good_armour(object *who, object *item) {
     object *other_armour;
     int val=0,i;
@@ -1084,20 +1252,25 @@ static int check_good_armour(object *who, object *item) {
 
 }
 
-/*
- * monster_check_pickup(): checks for items that monster can pick up.
+/**
+ * Checks for items that monster can pick up.
  *
- * Vick's (vick@bern.docs.uu.se) fix 921030 for the sweeper blob.
+ * Vick's (vick(at)bern.docs.uu.se) fix 921030 for the sweeper blob.
  * Each time the blob passes over some treasure, it will
  * grab it a.s.a.p.
  *
- * Eneq(@csd.uu.se): This can now be defined in the archetypes, added code
+ * Eneq((at)csd.uu.se): This can now be defined in the archetypes, added code
  * to handle this.
  *
  * This function was seen be continueing looping at one point (tmp->below
  * became a recursive loop.  It may be better to call monster_check_apply
  * after we pick everything up, since that function may call others which
  * affect stacking on this space.
+ *
+ * @param monster
+ * monster that can pick up items.
+ * @todo
+ * check tmp->next, shouldn't it be tmp->below?
  */
 
 static void monster_check_pickup(object *monster) {
