@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/monster.c: documentation and indent, no functional change.
+Nicolas Weeger 2007-03-18
+
 Implement feature request #1528522: Initial items should be applied/worn.
  server/player.c
 ---
